tests/paczka1/small_fuzzy/45912636.err
Error in line 2: 3cgZ S635 62,9
Error in line 9: rO1w S552 39,8
